# opencc_cmake

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt~  README.md  configure
bgen/: bgen_init.cxx  bgen_test.cxx  org_jetbrains_java_decompiler_modules_bgen_BGenDriver.h
bgen/cmake/: ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
global/: dir.cmake  global.cmake
irtools/: ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
j2wgen/: CMakeLists.txt  json2whirl.cxx  json_reader.cxx  whirl_writer.cxx
j2wgen/cmake/: ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
jgen/: jgen_base_decl.h  jgen_decl.cxx  jgen_decl.h  jgen_dst.h  jgen_global.cpp  jgen_global.h  jgen_include.h  jgen_node.cpp  jgen_node.h  jgen_st.cpp  jgen_st.h  jgen_type.cpp  jgen_type.h  jgen_visitor.cpp  jgen_visitor.h  json2whirl.cxx  json_ir_decl.cxx  json_ir_decl.h  json_reader.cxx  json_reader.h  json_symboltree.cxx  json_symboltree.h  json_typetree.cxx  json_typetree.h  test.cxx
jgen/cmake/: ela.cmake  localsf.cmake  saveenv.cmake
libb2w/: B2w_common.h  B2w_global.cxx  B2w_handler.h  B2w_init.cxx  B2w_symbol.cxx  B2w_test.cxx  B2w_type.cxx  B2w_wn.cxx  org_jetbrains_java_decompiler_modules_bgen_BGenDriver.h  whirlapiforjava.cxx
libb2w/cmake/: ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
libcmplrs/: CMakeLists.txt  README.txt  ela.cmake  localsf.cmake
libcomutils/: ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
libiberty/: .local.cmake.swp  .saveenv.cmake.swp  CMakeCache.txt  ela.cmake  local.cmake  localsf.cmake  saveenv.cmake
libspin/: .local.cmake.swp  ela.cmake  local.cmake
utils/: build.sh  checkout.sh  generate.sh
varib/: dir.cmake  ela.cmake  l_c.cmake  localsf.cmake  sharedsf.cmake
wgen/: CMakeLists.txt  ela.cmake  localsf.cmake  saveenv.cmake
wgen-java/: ela.cmake  localsf.cmake
wgen-java/common/com/: config.cxx  config.h  config_opt.cxx  ir_bcom.cxx  strtab.cxx  symtab.cxx  symtab.h  wn_tree_util.h
wgen-java/common/com/x8664/: targ_sim.cxx
wgen-java/common/util/: errors.cxx
wgen-java/wgen/: main.c  wgen_decl.cxx  wgen_dst.cxx  wgen_expr.cxx  wgen_misc.cxx  wgen_spin_symbol.cxx
whirl2c/: ela.cmake
